<resources>
    <string name="app_name">FitEnglish</string>
    <string name="title_home">Home</string>
    <string name="title_finder">Finder</string>
    <string name="title_cards">Cards</string>
    <string name="title_history">History</string>
    <string name="title_game_conf">Game Configuration</string>
    <string name="title_activity_matching_game">ActivityMatchingGame</string>
</resources>