<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.davidshinto.fitenglish.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home">
        <action
            android:id="@+id/action_navigation_home_to_navigation_game_conf"
            app:destination="@id/navigation_game_conf" />
    </fragment>

    <fragment
        android:id="@+id/navigation_finder"
        android:name="com.davidshinto.fitenglish.ui.finder.FinderFragment"
        android:label="@string/title_finder"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_cards"
        android:name="com.davidshinto.fitenglish.ui.cards.CardsFragment"
        android:label="@string/title_cards"
        tools:layout="@layout/fragment_notifications" />

    <fragment
        android:id="@+id/navigation_history"
        android:name="com.davidshinto.fitenglish.ui.history.HistoryFragment"
        android:label="@string/title_history"
        tools:layout="@layout/fragment_history" />

    <fragment
        android:id="@+id/navigation_game_conf"
        android:name="com.davidshinto.fitenglish.ui.home.GameConfFragment"
        android:label="@string/title_game_conf"
        tools:layout="@layout/fragment_game_conf">
        <action
            android:id="@+id/action_navigation_game_conf_to_flashGameActivity"
            app:destination="@id/flashGameActivity" />
        <action
            android:id="@+id/action_navigation_game_conf_to_matchingGameActivity"
            app:destination="@id/matchingGameActivity" />
        <action
            android:id="@+id/action_navigation_game_conf_to_writerGameActivity"
            app:destination="@id/writerGameActivity" />
    </fragment>
    <activity
        android:id="@+id/flashGameActivity"
        android:name="com.davidshinto.fitenglish.FlashGameActivity"
        android:label="activity_flash_game"
        tools:layout="@layout/activity_flash_game">
        <argument
            android:name="Game"
            app:argType="com.davidshinto.fitenglish.Game" />
    </activity>
    <activity
        android:id="@+id/matchingGameActivity"
        android:name="com.davidshinto.fitenglish.ui.home.modes.MatchingGameActivity"
        android:label="activity_matching_game"
        tools:layout="@layout/activity_matching_game">
        <argument
            android:name="Game"
            app:argType="com.davidshinto.fitenglish.Game" />
    </activity>
    <activity
        android:id="@+id/writerGameActivity"
        android:name="com.davidshinto.fitenglish.ui.home.modes.WriterGameActivity"
        android:label="activity_writer_game"
        tools:layout="@layout/activity_writer_game" >
        <argument
            android:name="Game"
            app:argType="com.davidshinto.fitenglish.Game" />
    </activity>
</navigation>